snapwebsites (0.1.42~saucy) UNRELEASED; urgency=high

  [ Alexis Wilke ]
  * Redesigned in a fully object oriented of the editor.js
  * Made all the corresponding changes to all the other files.

  [ R. Douglas Barbieri ]
  * Back end processes now read the UDP buffer in a background thread and
  buffer up messages, so no message should ever be lost during long updates
  (e.g. pagelist).

 -- R. Douglas Barbieri <doug@dooglio.net>  Fri, 11 Apr 2014 16:58:29 -0700

snapwebsites (0.1.41~saucy) saucy; urgency=high

  [ Alexis Wilke ]
  * a12d730 Fixed z-index problem with dropdown.
  * 72f505b Added support for a default value in dropdown widgets.

 -- R. Douglas Barbieri <doug@dooglio.net>  Fri, 04 Apr 2014 17:39:41 -0700

snapwebsites (0.1.40~saucy) saucy; urgency=high

  [ R. Douglas Barbieri ]
  * a7c014d Final repair of SNAP-46.

  [ Alexis Wilke ]
  * bd016be Fixed a bug in the data initialization that would offer the wrong
    type to plugins.
  * b0382ff Added a comment to explain the "strange" code.

 -- R. Douglas Barbieri <doug@dooglio.net>  Wed, 02 Apr 2014 11:02:59 -0700

snapwebsites (0.1.39~saucy) saucy; urgency=high

  [ Alexis Wilke ]
  * Fixed the pagelist backend so it works even while sites are initialized.
    (this includes a fix to the libQtCassandra 0.5.5)
  * Better handle the clearCache() on the context so it is less likely to
    fail.

  [ R. Douglas Barbieri ]
  * Repaired logout/login error where a user would be redirected to an
    admin-only page on login.

 -- R. Douglas Barbieri <doug@dooglio.net>  Tue, 01 Apr 2014 12:10:10 -0700

snapwebsites (0.1.38~saucy) saucy; urgency=high

  [ Alexis Wilke ]
  * Added support for dropdown widgets.
  * Added support for popups.
  * Added new layout files to the CMakeLists.txt

  [ R. Douglas Barbieri ]
  * Make new PPA release.

 -- R. Douglas Barbieri <doug@dooglio.net>  Wed, 26 Mar 2014 16:29:55 -0700

snapwebsites (0.1.37~saucy) saucy; urgency=high

  [R. Douglas Barbieri]