@@ -8,6 +8,7 @@ snapwebsites (0.1.42~saucy) UNRELEASED; urgency=high
   * Back end processes now read the UDP buffer in a background thread and
   buffer up messages, so no message should ever be lost during long updates
   (e.g. pagelist).
+  * Added sleep so thread doesn't peg the processor.
 
  -- R. Douglas Barbieri <doug@dooglio.net>  Fri, 11 Apr 2014 16:58:29 -0700
 
